[package]
name = "aa-pull-request-lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.8.1"
lambda_runtime = "0.8.2"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = [
    "json",
    "rustls",
    "native-tls-vendored",
] }
jira_query = "1.3.0"
tokio = { version = "1.33.0", features = ["full"] }
chrono = "0.4.31"
time = "0.3.29"
string-builder = "0.2.0"
serde_json = "1.0.107"
slack-messaging = { version = "0.2.2", features = ["fmt"] }
lazy_static = "1.4.0"
